# hip-python

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  _controls.py  _cuda_interop_layer_gen.py  _gitversion.py  _parse_hipify_perl.py  _render_update_version.py  build_hip_python_pkgs.sh  codegen.py  codegen_hip_python.py  generate_hip_python_pkgs.sh  init.sh  pyproject.toml  requirements.txt  run_default_build.sh  setup.cfg  setup.py  setup_python.py
.github/: CODEOWNERS  dependabot.yml
_codegen/: __init__.py  control.py  cparser.py  cython.py  doxyparser.py  nodes.py  packagegen.py  test_doxyparser.py  tree.py
_codegen/test/: addtoplevelpath.py  test.doxyparser.py
ci/: 0-install-rocm.sh  1-install-conda.sh  2-create-conda-envs.sh  3-build-and-test-for-multiple-cpython-versions.sh  3a-build-and-test-for-single-cpython-version.sh  3b-build-and-test-for-multiple-cpython-versions.sh  4-prepare-upload-binary.sh  5-upload-binary.sh  build-and-publish.jf  rebase-all.sh
ci/envs/: py310.yml  py311.yml  py38.yml  py39.yml
cuda/: __init__.py  ccuda.pxd  ccudart.pxd  cnvrtc.pxd  cuda.pxd  cuda.pyx  cudart.pxd  cudart.pyx  nvrtc.pxd  nvrtc.pyx
docs/: conf.py  index.md  index.md.in
docs/.sphinx/: _toc.yml.in  _toc.yml.in.in  requirements.in
docs/developer_guide/: 0_overview.md  1_code_generation.md  2_packaging.md  3_building_docs.md  4_commit_guide.md
docs/python_api/: hip.md  hipsolver.md  roctx.md
docs/python_api_manual/: _hip_helpers.md  _util_types.md
docs/sphinx/: _toc.yml  _toc.yml.in  _toc.yml.in.in  requirements.in  requirements.txt
docs/user_guide/: 0_install.md  1_usage.md  2_cuda_python_interop.md  3_datatypes.md  4_report_bugs.md  5_license.md
examples/: requirements.txt  test_examples.py
examples/0_Basic_Usage/: hip_deviceattributes.py  hip_deviceproperties.py  hip_python_device_array.py  hip_stream.py  hip_stream_add_callback.py  hipblas_with_numpy.py  hipfft.py  hiprand_monte_carlo_pi.py  hiprtc.py  hiprtc_launch_kernel_args.py  hiprtc_launch_kernel_no_args.py  rccl_comminitall_bcast.py
examples/1_CUDA_Interop/: Makefile  ccuda_stream.pyx  cuda_error_hallucinate_enums.py  cuda_stream.py  setup.py
examples/1_Hipify/: ccuda_stream.pyx  cuda_error_hallucinate_enums.py  cuda_stream.py  setup.py
examples/2_Advanced/: hip_jacobi.py  hiprtc_jit_with_llvm_ir.py  hiprtc_linking_device_functions.py  hiprtc_linking_llvm_ir.py
hip/: _hip_helpers.pxd  _hip_helpers.pyx  chip.pxd  chip.pyx  chipblas.pxd  chipblas.pyx  chipfft.pxd  chipfft.pyx  chiprand.pxd  chiprand.pyx  chiprtc.pxd  chiprtc.pyx  chipsparse.pxd  chipsparse.pyx  crccl.pxd  hip.pxd  hip.pyx  hipblas.pxd  hipblas.pyx  hipfft.pyx  hipify.py  hipify.py.in  hiprand.pyx  hiprtc.pxd  hiprtc.pyx  hipsparse.pxd  hipsparse.pyx  rccl.pyx
hip-python/: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
hip-python-as-cuda/: LICENSE  README.md  pyproject.toml  requirements.txt  requirements.txt.in  setup.cfg  setup.py
hip-python-as-cuda/cuda/: __init__.py  _version.py  _version.py.in  ccuda.pxd  ccudart.pxd  cnvrtc.pxd  cuda.pxd  cuda.pyx  cudart.pxd  cudart.pyx  nvrtc.pxd  nvrtc.pyx
hip-python/docs/: .gitignore  conf.py  index.md  index.md.in  requirements.txt
(+90 files in other folders)
