[metadata]       
name = hip-python
description = Python and Cython bindings for HIP
author = AMD_AUTHOR
url = https://github.com/AMD-AI/hip-python
version = 0.0.0 
# TODO: use versioneer package (github.com/python-versioneer/python-versioneer)
license = MIT
license_files = LICENSE
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
# see: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = 
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Environment :: GPU
    Programming Language :: Python :: 3.7
    Programming Language :: Cython
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha

[build_ext]
inplace=1

[options]
python_requires = >=3.7, <4
install_requires =
    cython
    libclang
zip_safe = False
packages = find:

[options.packages.find]
include = 
    hip
    hip._util

[options.package_data]
# Add the Cython files to the package
hip = *.pxd, *.pyx, *.so
hip._util = *.pxd, *.pyx
