# MIT License
# 
# Copyright (c) 2023-2024 Advanced Micro Devices, Inc.
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
[metadata]   
name = hip-python-as-cuda
description = Use HIP Python via CUDA names
author = Advanced Micro Devices, Inc.
author_email = hip-python.maintainer@amd.com
url = https://github.com/ROCmSoftwarePlatform/hip-python
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
# see: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = 
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Environment :: GPU
    Programming Language :: Python :: 3.7
    Programming Language :: Cython
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha

[build_ext]
inplace=1

[options]
python_requires = >=3.7, <4
zip_safe = False
packages = 
    cuda

[options.package_data]
# Add Python and Cython files to the package
cuda = *.pxd, *.pyx, *.so, __init__.py